fix css overflow

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow-y:auto
 
 }
 
@@ -139,4 +140,11 @@ footer{
     background-color: var(--background-fotter);
     color: #f5f5f6;
     font-size: 1.2em;
+}
+
+a {
+    color: var(--white);
+    text-decoration-style: none;
+    text-decoration: none;
+    -moz-text-decoration-color: none;
 }
